duicontrolpanel (0.7.1) UNRELEASED; urgency=low

  [ David Kedves ]
  * Fix for debian/control

 -- David Kedves <dkedves@blumsoft.eu>  Wed, 17 Feb 2010 15:38:56 +0100

duicontrolpanel (0.7.0) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#154090 Localization of the applet loaded too late
  * Fixes: NB#154094 Duicontrolpanel has many help menu items
  * Fixes: NB#138717 System Settings takes too long to launch
  * Implements pausing the loading on mainpage while user is scrolling
    (experimental)

  [ Viktor Nagy ]
  * Fixes: NB#156262 duicontrolpanel's D-Bus service is not installed 
    with duicontrolpanel but with libduicontrolpanel-dev

  [ Laszlo Pere ]
  * Fixes: NB#156790 Dcp fully disables an applet when its crashes
  * Fixes: NB#156882 "Most recently used" text doesn't appear.

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 15 Feb 2010 11:42:56 +0100

duicontrolpanel (0.6.5) unstable; urgency=low

  [ Laszlo Gal ]
  * Fixes NB#149661 - Private class members in public headers
  * Fixes NB#148951 - Back button has missleading behaviour
  
 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Fri, 22 Jan 2010 15:16:57 +0100

duicontrolpanel (0.6.4) unstable; urgency=low

  [ Viktor Nagy ]
  * Fixes: NB#149663 Class member names are not consistent
  * Fixes: NB#149659 The identation is not consistent 
  * Updated category containers

  [ Robert Manner ]
  * Fixes: NB#150929 The applets should be re-enabled when the
    controlpanel is re-installed
  * Implements: support for using applet translations

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Thu, 14 Jan 2010 15:52:38 +0100

duicontrolpanel (0.6.3) unstable; urgency=low

  * Fixes: DuiControlPanel crash

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 11 Jan 2010 13:50:25 +0100

duicontrolpanel (0.6.2) unstable; urgency=low

  * Cleanup, bugfixes, following libdui 0.17 changes 

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Thu, 07 Jan 2010 14:40:55 +0100

duicontrolpanel (0.6.1) unstable; urgency=low